# re2c-win

./: README  config.h
build_win/: CMakeLists.txt  build.bat  build_VS2017.bat
